# flutter_cpp_basic

./: .gitignore  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: counter.h
android/app/src/main/cpp/counter/: counter.cpp
android/app/src/main/cpp/data_transformer/: data_transformer.cpp
android/app/src/main/cpp/file_info/: file_info.cpp
android/app/src/main/kotlin/com/example/flutter_cpp_basic/: CounterWrapper.kt  DataTransformerWrapper.kt  FileInfoWrapper.kt  MainActivity.kt
ios/Runner/: AppDelegate.swift  DataTransformerWrapper.h  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/NativeModules/Counter/: CounterPlugin.swift  CounterWrapper.h  CounterWrapper.mm
ios/Runner/NativeModules/Counter/cpp/: counter.cpp
ios/Runner/NativeModules/DataTransformer/: DataTransformerPlugin.swift  DataTransformerWrapper.mm
ios/Runner/NativeModules/FileInfo/: FileInfoPlugin.swift  FileInfoWrapper.h  FileInfoWrapper.mm
ios/Runner/cpp/: data_transformer.cpp
lib/: cpp_data_transformer_plugin.dart  main.dart
lib/models/: file_metadata.dart
lib/pages/: counter_page.dart  data_transformer_page.dart  file_info_page.dart  home_page.dart
lib/plugins/: cpp_counter_plugin.dart  cpp_file_info_plugin.dart
lib/widgets/file_info_page/: metadata_display_card.dart  select_file_card.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
